# shopping-mall

./: .gitignore  Dockerfile  README.md  entrypoint.sh  fly.toml  pyproject.toml  test.db  test.ps1
.github/workflows/: code_review.yml  fly.yml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: products.py
app/core/: config.py
app/crud/: crud_product.py
app/db/: models.py  session.py
app/schemas/: __init__.py  products.py
test/: conftest.py  test_main.py  test_product.py
