[tool.poetry]
name = "shopping-mall"
version = "0.1.0"
description = ""
authors = ["Uuug"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.68.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
postgres = "^4.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
